--- a/itecos.css
+++ b/itecos.css
@@ -26,11 +26,12 @@ ul li a
 	font-size: 25px;
 	text-decoration: none;
 	color: white;
+	margin-left: 20px;
 
 }
 ul
 {	
-	width: 40%;
+	width: 50%;
 	margin:0 auto;
 }
 #boxmenu
@@ -41,6 +42,17 @@ ul
 	height: 70px;
 	background: #0C7DD1;
 }
+#fheader
+{
+	margin: 0 auto;
+	width: 100%;
+
+}
+#itecosheader
+{
+	width: 100%;
+}
+
 .menu
 {
 	
