--- a/itecos.css
+++ b/itecos.css
@@ -2,9 +2,12 @@ html
 {
 	margin: 0;
 	padding:0;
+	height: 100%;
 }
 body
 {	
+	height: 100%;
+	font-family: 'Roboto', sans-serif;
 	max-width: 2000px;
 	width: 100%;
 	
@@ -34,28 +37,101 @@ ul
 	width: 50%;
 	margin:0 auto;
 }
+footer
+{
+	height: 100px;
+	width: 100%;
+	position: fixed;
+	bottom: 0px;
+	background: #61787C;
+	
+}
 #boxmenu
 {
 
 	margin: 0 auto;
 	width: 100%;
 	height: 70px;
-	background: #0C7DD1;
+	background: #2196f3;
 }
 #fheader
 {
 	margin: 0 auto;
-	width: 100%;
+	width: 90%;
 
 }
 #itecosheader
 {
 	width: 100%;
 }
-
+#box1
+{
+	margin-left:30px;
+	width: 60%;
+	margin-right: 100px;
+	display: inline-table;
+	
+}
+#box2
+{
+	margin-top: 100px;
+	display: inline-table;
+	width: 20%;
+}
+#derechos
+{
+	display: inline-block;
+}
+#redes
+{
+	width: 80%;
+	text-align: right;
+	display: inline-block;
+	font-size: 30px;
+}
+#redes1
+{
+	display: inline-block;
+}
+a
+{
+	text-align: none;
+}
 .menu
 {
 	
 	margin-left: 10px;
 	display: inline-block;
+}
+h3
+{
+	margin-top: -6px;
+	display: inline-block;
+	width: 40%;
+}
+
+.subtitulo
+{
+
+text-align: center;
+/*border :2px red solid;
+*/font-size: 20px;
+color: white;
+width: 100%;
+background: #2196f3;
+height:40px;
+
+-webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+-moz-box-shadow:    2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+box-shadow:         2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+}
+.descripcion
+{
+
+text-align: left;
+}
+
+.red
+{
+	text-decoration: none;
 }
